# master

./: .env.template  .gitignore  docker-compose.yml  requirements.txt
CBV/: README.md
DRF/mysite/: db.sqlite3  requirements.txt
DRF/mysite/myauth/: urls.py  views.py
DRF/mysite/mysite/: settings.py  urls.py
DRF/mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  tests.py  urls.py  views.py
Django_Cache/mysite/mysite/: settings.py
Django_Cache/mysite/shopapp/: admin.py  serializers.py  tests.py  urls.py  views.py
Docs/: requirements.txt
Docs/mysite/myapiapp/: urls.py  views.py
Docs/mysite/mysite/: settings.py  urls.py
Docs/mysite/shopapp/: views.py
Files/mysite/: db.sqlite3
Files/mysite/myauth/: forms.py  models.py  urls.py  views.py
Files/mysite/mysite/: settings.py  urls.py
frontend_task/: page.html  styles.css
hard_name_of_project/: db.sqlite3  manage.py
hard_name_of_project/hard_name_of_project/: asgi.py  settings.py  urls.py  wsgi.py
hard_name_of_project/myauth/: forms.py  models.py  tests.py  urls.py  views.py
hard_name_of_project/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
hard_name_of_project/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  tests.py  urls.py  views.py
import_export/mysite/: data.csv  shopapp-fixtures.json
logging/: Dockerfile  docker-compose.yml  requirements.txt
mysite/mysite/: settings.py
prod/: Dockerfile  docker-compose.yml  pyproject.toml
prod/mysite/: pyproject.toml
prod/mysite/shopapp/: forms.py
queries/mysite/: db.sqlite3
(+113 files in other folders)
